@@ -1,3 +1,9 @@
+2006-10-24  Mike Cvet  <mcvet@redhat.com>
+
+	* FCrash.java (.update): Changed TasksCrashObserver to iterating
+	through Tasks and adding AttachedObserver.
+	(TasksCrashObserver): Removed.
+
 2006-10-24  Nurdin Premji  <npremji@redhat.com>
 
 	* TestFStack.java: Ran GNU Formatter
